--- a/.env
+++ b/.env
@@ -1,23 +1,23 @@
 # Backend environment variables
 NODE_ENV=production
-DATABASE_URL=postgresql://postgres:password@postgresql:5432/mydb
+DATABASE_URL=postgresql://usuario:123456789@postgresql:5432/base
 MONGODB_URI=mongodb://mongodb:27017/mydb
-REDIS_HOST=redis-sql
+REDIS_HOST=redis
 SMTP_HOST=postfix
 SMTP_USER=your-email@example.com
 SMTP_PASS=your-email-password
 
 # Frontend environment variables
-VITE_API_URL=http://backend:3000/api
+VITE_API_URL=http://backend:4000/api
 
 # PostgreSQL environment variables
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=password
-POSTGRES_DB=mydb
+POSTGRES_USER=usuario
+POSTGRES_PASSWORD=123456789
+POSTGRES_DB=base
 
 # MongoDB environment variables
 MONGO_INITDB_ROOT_USERNAME=root
-MONGO_INITDB_ROOT_PASSWORD=example
+MONGO_INITDB_ROOT_PASSWORD=123456789
 
 # SMTP relay environment variables
 MYHOSTNAME=mail.example.com
@@ -26,3 +26,4 @@ SMTP_RELAY_HOST=smtp.your-email-provider.com
 
 
 OUTPUT_PORT=8080
+BACKEND_PORT=4000
