--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "@apollo/server": "^5.2.0",
+    "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "fs": "^0.0.1-security",
+    "joi": "^18.0.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^9.0.0",
+    "multer": "^2.0.2",
+    "node-redis": "^0.1.7",
+    "nodemailer": "^7.0.11",
+    "postgres": "^3.4.7",
+    "prom-client": "^15.1.3"
   }
 }
