--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-#version: '3.8'
-
 services:
   frontend:
     #image: node:trixie
@@ -7,12 +5,13 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "8080:80"
+      #- "8080:80"
+      - "${OUTPUT_PORT}:80"
     #environment:
       #NODE_ENV: ${NODE_ENV}
     #  NODE_ENV=PRODUCTION
     networks:
-      - myapp-network
+      - mediastray-network
     volumes:
       - ./public:/var/www/public
       - ./games:/var/www/games
@@ -33,7 +32,8 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      #- "4000:4000"
+      - "${BACKEND_PORT}:4000"
     environment:
       NODE_ENV: ${NODE_ENV}
       DATABASE_URL: ${DATABASE_URL}
@@ -42,12 +42,15 @@ services:
       SMTP_HOST: ${SMTP_HOST}
       SMTP_USER: ${SMTP_USER}
       SMTP_PASS: ${SMTP_PASS}
+    volumes:
+      - ./public:/var/www/public
+      - ./games:/var/www/games
     networks:
-      - myapp-network
+      - mediastray-network
     depends_on:
       - postgresql
       - mongodb
-      - redis-sql
+      - redis
 
   postgresql:
     image: postgres:13
@@ -58,42 +61,26 @@ services:
     volumes:
       - ./.docker/database/postgresql:/var/lib/postgresql/data
     networks:
-      - myapp-network
+      - mediastray-network
 
   mongodb:
     image: mongo:4.4
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+    ulimits:
+      nofile:
+        soft: 64000
+        hard: 64000
     volumes:
       - ./.docker/database/mongodb:/data/db
     networks:
-      - myapp-network
+      - mediastray-network
 
-  redis-sql:
+  redis:
     image: redis:6.2
     networks:
-      - myapp-network
-  
-  redis-mongodb:
-    image: redis:6.2
-    networks:
-      - myapp-network
-
-  redis-backend:
-    image: redis:6.2
-    networks:
-      - myapp-network
-
-  #postfix:
-  #  image: catatnight/postfix-relay-only
-  #  environment:
-  #    MYHOSTNAME: ${MYHOSTNAME}
-  #    RELAYHOST: ${SMTP_RELAY_HOST}:587
-  #    SMTP_USERNAME: ${SMTP_USER}
-  #    SMTP_PASSWORD: ${SMTP_PASS}
-  #  networks:
-  #    - myapp-network
+      - mediastray-network
 
   postfix:
     image: tozd/postfix:ubuntu-noble
@@ -103,61 +90,15 @@ services:
       POSTFIX_SMTP_USERNAME: ${SMTP_USER}
       POSTFIX_SMTP_PASSWORD: ${SMTP_PASS}
     ports:
-      - "25:25"  # SMTP port
+      - "25:25"
     networks:
-      - myapp-network
-
-#  grafana:
-#    image: grafana/grafana-oss
-#    ports:
-#      - "3002:3000"
-#    environment:
-#      GF_SECURITY_ADMIN_USER: admin
-#      GF_SECURITY_ADMIN_PASSWORD: admin
-#    networks:
-#      - myapp-network
-
-#  prometheus:
-#    image: prom/prometheus:v2.30.3
-#    volumes:
-#      - ./.docker/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-#    ports:
-#      - "9090:9090"
-#    networks:
-#      - myapp-network
-
-#  elasticsearch:
-#    image: docker.elastic.co/elasticsearch/elasticsearch:7.10.2
-#    container_name: elasticsearch
-#    environment:
-#      - discovery.type=single-node
-#    networks:
-#      - esnet
-
-
-#  logstash:
-#    image: docker.elastic.co/logstash/logstash:7.10.1
-#    volumes:
-#      - ./.docker/logstash/logstash.conf:/usr/share/logstash/pipeline/logstash.conf
-#    ports:
-#      - "5044:5044"
-#    networks:
-#      - esnet
-
-#  kibana:
-#    image: docker.elastic.co/kibana/kibana:7.10.2
-#    container_name: kibana
-#    depends_on:
-#      - elasticsearch
-#    ports:
-#      - "5601:5601"
-#    environment:
-#      - ELASTICSEARCH_URL=http://elasticsearch:9200
-#    networks:
-#      - esnet
-
+      - mediastray-network
 
 networks:
-  myapp-network:
+  mediastray-network:
   esnet:
     driver: bridge
+
+volumes:
+  prometheus_data:
+  grafana_data:
