--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Backend environment variables
 NODE_ENV=production
 DATABASE_URL=postgresql://usuario:123456789@postgresql:5432/base
-MONGODB_URI=mongodb://mongodb:27017/mydb
-REDIS_HOST=redis-sql
+MONGODB_URI=mongodb://root:123456789@mongodb:27017/
+REDIS_HOST=redis
 SMTP_HOST=postfix
 SMTP_USER=your-email@example.com
 SMTP_PASS=your-email-password
@@ -16,8 +16,8 @@ POSTGRES_PASSWORD=123456789
 POSTGRES_DB=base
 
 # MongoDB environment variables
-MONGO_INITDB_ROOT_USERNAME=root
-MONGO_INITDB_ROOT_PASSWORD=example
+MONGO_INITDB_ROOT_USERNAME=usuario
+MONGO_INITDB_ROOT_PASSWORD=123456789
 
 # SMTP relay environment variables
 MYHOSTNAME=mail.example.com
