--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Backend environment variables
 NODE_ENV=production
 DATABASE_URL=postgresql://usuario:123456789@postgresql:5432/base
-MONGODB_URI=mongodb://mongodb:27017/mydb
+MONGODB_URI=mongodb://root:123456789@mongodb:27017/
 REDIS_HOST=redis
 SMTP_HOST=postfix
 SMTP_USER=your-email@example.com
@@ -16,7 +16,7 @@ POSTGRES_PASSWORD=123456789
 POSTGRES_DB=base
 
 # MongoDB environment variables
-MONGO_INITDB_ROOT_USERNAME=root
+MONGO_INITDB_ROOT_USERNAME=usuario
 MONGO_INITDB_ROOT_PASSWORD=123456789
 
 # SMTP relay environment variables
