--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,9 @@
     "multer": "^2.0.2",
     "node-redis": "^0.1.7",
     "nodemailer": "^7.0.11",
+    "pg": "^8.16.3",
     "postgres": "^3.4.7",
-    "prom-client": "^15.1.3"
+    "prom-client": "^15.1.3",
+    "redis": "^5.10.0"
   }
 }
