--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -7,9 +7,9 @@ services:
     ports:
       #- "8080:80"
       - "${OUTPUT_PORT}:80"
-    #environment:
+    environment:
       #NODE_ENV: ${NODE_ENV}
-    #  NODE_ENV=PRODUCTION
+      NODE_ENV: PRODUCTION
     networks:
       - mediastray-network
     volumes:
