--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -10,6 +10,11 @@ services:
     environment:
       #NODE_ENV: ${NODE_ENV}
       NODE_ENV: PRODUCTION
+      DATABASE_URL: ${DATABASE_URL}
+      MONGODB_URI: ${MONGODB_URI}
+      REDIS_HOST: ${REDIS_HOST}
+      PUBLIC_FILES_DIR: /public
+      GAMES_FILES_DIR: /games
     networks:
       - mediastray-network
     volumes:
@@ -35,13 +40,11 @@ services:
       #- "4000:4000"
       - "${BACKEND_PORT}:4000"
     environment:
-      NODE_ENV: ${NODE_ENV}
+      #NODE_ENV: ${NODE_ENV}
+      NODE_ENV: PRODUCTION
       DATABASE_URL: ${DATABASE_URL}
       MONGODB_URI: ${MONGODB_URI}
       REDIS_HOST: ${REDIS_HOST}
-      SMTP_HOST: ${SMTP_HOST}
-      SMTP_USER: ${SMTP_USER}
-      SMTP_PASS: ${SMTP_PASS}
     volumes:
       - ./public:/var/www/public
       - ./games:/var/www/games
@@ -81,18 +84,6 @@ services:
 
   redis:
     image: redis:6.2
-    networks:
-      - mediastray-network
-
-  postfix:
-    image: tozd/postfix:ubuntu-noble
-    environment:
-      POSTFIX_MYHOSTNAME: ${MYHOSTNAME}
-      POSTFIX_RELAYHOST: ${SMTP_RELAY_HOST}:587
-      POSTFIX_SMTP_USERNAME: ${SMTP_USER}
-      POSTFIX_SMTP_PASSWORD: ${SMTP_PASS}
-    ports:
-      - "25:25"
     networks:
       - mediastray-network
 
