--- a/frontend/nginx-dev.conf
+++ b/frontend/nginx-dev.conf
@@ -4,14 +4,8 @@ upstream frontend_app {
 
 server {
     listen 80;
-
-    location / {
-        proxy_pass "http://127.0.0.1:5173";
-        #alias /usr/share/nginx/html/frontend/;
-    }
-
     error_page 404 =200 /;
-    
+
     location /nginx_status {
         stub_status on;
         access_log off;
@@ -19,7 +13,7 @@ server {
         allow 10.0.0.0/8;
         deny all;
     }
-    
+
     location /public/ {
         alias /var/www/public/;
         try_files $uri $uri/index.html =404;
@@ -38,6 +32,20 @@ server {
         proxy_set_header Host $host;
         proxy_set_header Connection '';
     }
-   
-}
 
+    # Development: proxy all requests to Vite dev server on port 5173
+    location / {
+        proxy_pass http://localhost:5173;  # or use "frontend:5173" if frontend is a service in Docker
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        #if ($http_upgrade = "websocket") {
+        #    proxy_set_header Upgrade $http_upgrade;
+        #    proxy_set_header Connection 'upgrade';
+        #    proxy_pass http://localhost:5173;
+        #}
+    }
+}
