--- a/.env
+++ b/.env
@@ -3,9 +3,7 @@ NODE_ENV=production
 DATABASE_URL=postgresql://usuario:123456789@postgresql:5432/base
 MONGODB_URI=mongodb://root:123456789@mongodb:27017/
 REDIS_HOST=redis
-SMTP_HOST=postfix
-SMTP_USER=your-email@example.com
-SMTP_PASS=your-email-password
+
 
 # Frontend environment variables
 VITE_API_URL=http://backend:4000/api
@@ -19,11 +17,7 @@ POSTGRES_DB=base
 MONGO_INITDB_ROOT_USERNAME=usuario
 MONGO_INITDB_ROOT_PASSWORD=123456789
 
-# SMTP relay environment variables
-MYHOSTNAME=mail.example.com
-SMTP_RELAY_HOST=smtp.your-email-provider.com
+DOMAIN=mediastray.com
 
-
-
-OUTPUT_PORT=8080
-BACKEND_PORT=4000
+OUTPUT_PORT=8080 #hay que cambiarlo en todo el proyecto
+BACKEND_PORT=4000 #hay que cambiarlo en todo el proyecto
