--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.mjs",
+    "dev": "nodemon server.mjs"
   },
   "keywords": [],
   "author": "",
@@ -13,18 +14,23 @@
   "dependencies": {
     "@apollo/server": "^5.2.0",
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "form-data": "^4.0.5",
     "fs": "^0.0.1-security",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
     "multer": "^2.0.2",
     "node-redis": "^0.1.7",
-    "nodemailer": "^7.0.11",
+    "path": "^0.12.7",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
     "prom-client": "^15.1.3",
     "redis": "^5.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
