--- a/frontend/DockerfileDev
+++ b/frontend/DockerfileDev
@@ -1,15 +1,15 @@
 # --- Stage 1: Build the React Application ---
-FROM node:20 as build
+ #FROM node:20 as build
 
 # Set the working directory
-WORKDIR /usr/src/app
+ #WORKDIR /usr/src/app
 
 # Copy package files and install dependencies
 #COPY package*.json ./
 #RUN npm install
 
 # Copy source code and build the app
-COPY . .
+ #COPY . .
 # Assuming 'npm run build' generates static files into a 'dist' directory
 #RUN npm run build 
 
@@ -27,7 +27,10 @@ COPY nginx-dev.conf /etc/nginx/conf.d/default.conf
 # IMPORTANT: Copy the static build output from the build stage (Stage 1)
 # The built files are located at /usr/src/app/dist inside the 'build' stage.
 #COPY --from=build /usr/src/app/dist /usr/share/nginx/html/frontend
-COPY --from=build /usr/src/app/ /usr/share/nginx/html/frontend/app/
+ #COPY --from=build /usr/src/app/ /usr/share/nginx/html/frontend/app/
+
+WORKDIR /usr/share/nginx/html/frontend/app/
+RUN npm run dev &
 
 # CRITICAL FIX: Ensure the files are owned by the Nginx user (default is 'nginx')
 # This resolves permission issues that prevent Nginx from reading static files.
