--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -6,13 +6,13 @@ server {
     listen 80;
     error_page 404 =200 /;
 
-    location /nginx_status {
-        stub_status on;
-        access_log off;
-        allow 172.0.0.0/8; 
-        allow 10.0.0.0/8;
-        deny all;
-    }
+    #location /nginx_status {
+    #    stub_status on;
+    #    access_log off;
+    #    allow 172.0.0.0/8; 
+    #    allow 10.0.0.0/8;
+    #    deny all;
+    #}
     
     location /public/ {
         alias /var/www/public/;
