--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Backend environment variables
-NODE_ENV=production
+NODE_ENV=DEVELOPMENT
 DATABASE_URL=postgresql://usuario:123456789@postgresql:5432/base
 MONGODB_URI=mongodb://root:123456789@mongodb:27017/ #ROOT O USUARIO CAMBIAR
 REDIS_HOST=redis
