Funcion correo temporal

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Backend environment variables
-NODE_ENV=DEVELOPMENT
+NODE_ENV=PRODUCTION
 DATABASE_URL=postgresql://usuario:123456789@postgresql:5432/base
 MONGODB_URI=mongodb://root:123456789@mongodb:27017/ #ROOT O USUARIO CAMBIAR
 REDIS_HOST=redis
@@ -16,6 +16,12 @@ POSTGRES_DB=base
 # MongoDB environment variables
 MONGO_INITDB_ROOT_USERNAME=usuario
 MONGO_INITDB_ROOT_PASSWORD=123456789
+
+# Email con mailgun
+MAILGUN_API_KEY=
+MAILGUN_DOMAIN=
+MAILGUN_SENDER=
+MAILGUN_TEST_EMAIL=
 
 DOMAIN=mediastray.com
 
