Preparar para cambio deploy

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,9 @@ NODE_ENV=PRODUCTION
 DATABASE_URL=postgresql://usuario:123456789@postgresql:5432/base
 MONGODB_URI=mongodb://root:123456789@mongodb:27017/ #ROOT O USUARIO CAMBIAR
 REDIS_HOST=redis
-
+PUBLIC_FILES_PATH=/public
+GAMES_FILES_PATH=/games
+FRONTEND_DIST_PATH=/frontend/dist
 
 # Frontend environment variables
 VITE_API_URL=http://backend:4000/api
@@ -18,10 +20,10 @@ MONGO_INITDB_ROOT_USERNAME=usuario
 MONGO_INITDB_ROOT_PASSWORD=123456789
 
 # Email con mailgun
-MAILGUN_API_KEY=
-MAILGUN_DOMAIN=
-MAILGUN_SENDER=
-MAILGUN_TEST_EMAIL=
+MAILGUN_API_KEY=a7e1b86c5a02b58eab4bc7d44a4b76e6
+MAILGUN_DOMAIN=sandbox242ac7ab61094fe0bf2002fa56ed264d
+MAILGUN_SENDER=postmaster@sandbox242ac7ab61094fe0bf2002fa56ed264d
+MAILGUN_TEST_EMAIL=freewillfooljoy@gmail.com
 
 DOMAIN=mediastray.com
 
