--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -43,12 +43,13 @@ services:
       MONGODB_URI: ${MONGODB_URI}
       REDIS_HOST: ${REDIS_HOST}
       FREE_CORS: s
-      PUBLIC_FILES_DIR: /public
-      GAMES_FILES_DIR: /games
       MAILGUN_API_KEY: ${MAILGUN_API_KEY}
       MAILGUN_DOMAIN: ${MAILGUN_DOMAIN}
       MAILGUN_SENDER: ${MAILGUN_SENDER}
       MAILGUN_TEST_EMAIL: ${MAILGUN_TEST_EMAIL}
+      PUBLIC_FILES_PATH: ${PUBLIC_FILES_PATH}
+      GAMES_FILES_PATH: ${GAMES_FILES_PATH}
+      FRONTEND_DIST_PATH: ${FRONTEND_DIST_PATH}
     volumes:
       - ./public:/var/www/public
       - ./games:/var/www/games
