--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,9 @@ services:
       MAILGUN_API_KEY: ${MAILGUN_API_KEY}
       MAILGUN_DOMAIN: ${MAILGUN_DOMAIN}
       MAILGUN_SENDER: ${MAILGUN_SENDER}
+      PUBLIC_FILES_PATH: ${PUBLIC_FILES_PATH}
+      GAMES_FILES_PATH: ${GAMES_FILES_PATH}
+      FRONTEND_DIST_PATH: ${FRONTEND_DIST_PATH}
     volumes:
       - ./public:/var/www/public
       - ./games:/var/www/games
