--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,30 @@
 # Backend environment variables
-NODE_ENV=PRODUCTION
-DATABASE_URL=postgresql://usuario:123456789@postgresql:5432/base
-MONGODB_URI=mongodb://root:123456789@mongodb:27017/ #ROOT O USUARIO CAMBIAR
-REDIS_HOST=redis
-PUBLIC_FILES_PATH=/public
-GAMES_FILES_PATH=/games
-FRONTEND_DIST_PATH=/frontend/dist
-
-# Frontend environment variables
-VITE_API_URL=http://backend:4000/api
+PUBLIC_FILES_PATH=./public
+GAMES_FILES_PATH=./games
+FRONTEND_DIST_PATH=./frontend/dist
+INIT_TESTS=true
 
 # PostgreSQL environment variables
 POSTGRES_USER=usuario
 POSTGRES_PASSWORD=123456789
 POSTGRES_DB=base
+DATABASE_URL=postgresql://usuario:123456789@postgresql:5432/base
+SQL_INIT_PATH=./src/connections/base/init.sql
+SQL_INIT_PATH_FAKES=./src/connections/base/datosFalsos.sql
 
 # MongoDB environment variables
 MONGO_INITDB_ROOT_USERNAME=usuario
 MONGO_INITDB_ROOT_PASSWORD=123456789
+MONGODB_URI=mongodb://root:123456789@mongodb:27017/ #ROOT O USUARIO CAMBIAR
 
 # Email con mailgun
-MAILGUN_API_KEY=a7e1b86c5a02b58eab4bc7d44a4b76e6
-MAILGUN_DOMAIN=sandbox242ac7ab61094fe0bf2002fa56ed264d
-MAILGUN_SENDER=postmaster@sandbox242ac7ab61094fe0bf2002fa56ed264d
-MAILGUN_TEST_EMAIL=freewillfooljoy@gmail.com
+MAILGUN_API_KEY=
+MAILGUN_DOMAIN=
+MAILGUN_SENDER=
+MAILGUN_TEST_EMAIL=
+
+REDIS_HOST=redis:6379
 
 DOMAIN=mediastray.com
 
-OUTPUT_PORT=8080 #hay que cambiarlo en todo el proyecto
-BACKEND_PORT=4000 #hay que cambiarlo en todo el proyecto
+BACKEND_PORT=8510 #hay que cambiarlo en todo el proyecto
