--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,44 @@
 services:
-  frontend:
-    #image: node:trixie
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    ports:
-      #- "8080:80"
-      - "${OUTPUT_PORT}:80"
-    environment:
-      #NODE_ENV: ${NODE_ENV}
-      NODE_ENV: PRODUCTION
-      DATABASE_URL: ${DATABASE_URL}
-      MONGODB_URI: ${MONGODB_URI}
-      REDIS_HOST: ${REDIS_HOST}
-      PUBLIC_FILES_DIR: /public
-      GAMES_FILES_DIR: /games
-    networks:
-      - mediastray-network
-    volumes:
-      - ./public:/var/www/public
-      - ./games:/var/www/games
-    depends_on:
-      backend:
-        condition: service_started
-    restart: always
-    #healthcheck:
-    #    test: ["CMD", "curl", "-f", "http://localhost:8081"]
-    #    interval: 10s
-    #    timeout: 5s
-    #    retries: 5
-    #start_period: 10s 
+  #frontend:
+  #  #image: node:trixie
+  #  build:
+  #    context: ./frontend
+  #    dockerfile: Dockerfile
+  #  ports:
+  #    #- "8080:80"
+  #    - "${OUTPUT_PORT}:80"
+  #  environment:
+  #    #NODE_ENV: ${NODE_ENV}
+  #    NODE_ENV: PRODUCTION
+  #    DATABASE_URL: ${DATABASE_URL}
+  #    MONGODB_URI: ${MONGODB_URI}
+  #    REDIS_HOST: ${REDIS_HOST}
+  #    PUBLIC_FILES_DIR: /public
+  #    GAMES_FILES_DIR: /games
+  #  networks:
+  #    - mediastray-network
+  #  volumes:
+  #    - ./public:/var/www/public
+  #    - ./games:/var/www/games
+  #  depends_on:
+  #    backend:
+  #      condition: service_started
+  #  restart: always
+  #  #healthcheck:
+  #  #    test: ["CMD", "curl", "-f", "http://localhost:8081"]
+  #  #    interval: 10s
+  #  #    timeout: 5s
+  #  #    retries: 5
+  #  #start_period: 10s 
 
   backend:
     image: node:trixie
     build:
-      context: ./backend
+      context: ./
       dockerfile: Dockerfile
     ports:
-      #- "4000:4000"
-      - "${BACKEND_PORT}:4000"
+      #- "8510:8510"
+      - "${BACKEND_PORT}:8510"
     environment:
       #NODE_ENV: ${NODE_ENV}
       NODE_ENV: PRODUCTION
@@ -51,6 +51,9 @@ services:
       PUBLIC_FILES_PATH: ${PUBLIC_FILES_PATH}
       GAMES_FILES_PATH: ${GAMES_FILES_PATH}
       FRONTEND_DIST_PATH: ${FRONTEND_DIST_PATH}
+      SQL_INIT_PATH: ${SQL_INIT_PATH}
+      SQL_INIT_PATH_FAKES: ${SQL_INIT_PATH_FAKES}
+      INIT_TESTS: ${INIT_TESTS}
     volumes:
       - ./public:/var/www/public
       - ./games:/var/www/games
@@ -73,6 +76,8 @@ services:
       - ./.docker/database/postgresql:/var/lib/postgresql/data
     networks:
       - mediastray-network
+    #depends_on:
+    #  - redis
 
   mongodb:
     image: mongo:4.4
