--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,8 @@
-REACT_APP_API_URL=http://localhost:8080/api
+REACT_APP_API_URL=http://localhost:8510/api
+REACT_APP_PUBLIC_URL=http://localhost:8510/public
+REACT_APP_GAMES_URL=http://localhost:8510/games
 REACT_APP_API_KEY=0
-VITE_API_URL=http://localhost:8080/api
+VITE_API_URL=http://localhost:8510/api
 VITE_API_KEY=0
+VITE_PUBLIC_URL=http://localhost:8510/public
+VITE_GAMES_URL=http://localhost:8510/games
