--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ PUBLIC_FILES_PATH=./public
 GAMES_FILES_PATH=./games
 FRONTEND_DIST_PATH=./frontend/dist
 INIT_TESTS=true
+INIT_METRICS=false
 
 # PostgreSQL environment variables
 POSTGRES_USER=usuario
