--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ GAMES_FILES_PATH=./games
 FRONTEND_DIST_PATH=./frontend/dist
 INIT_TESTS=true
 INIT_METRICS=false
+SERVE_FRONTEND=true
+SERVE_STATIC=true
 
 # PostgreSQL environment variables
 POSTGRES_USER=usuario
@@ -16,7 +18,7 @@ SQL_INIT_PATH_FAKES=./src/connections/base/datosFalsos.sql
 # MongoDB environment variables
 MONGO_INITDB_ROOT_USERNAME=usuario
 MONGO_INITDB_ROOT_PASSWORD=123456789
-MONGODB_URI=mongodb://root:123456789@mongodb:27017/ #ROOT O USUARIO CAMBIAR
+MONGODB_URI=mongodb://usuario:123456789@mongodb:27017/ #ROOT O USUARIO CAMBIAR
 
 # Email con mailgun
 MAILGUN_API_KEY=
