--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ INIT_TESTS=true
 INIT_METRICS=false
 SERVE_FRONTEND=true
 SERVE_STATIC=true
+FRONTEND_URL=http://localhost:8510
 
 # PostgreSQL environment variables
 POSTGRES_USER=usuario
