Tokenizacion de rutas

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ INIT_METRICS=false
 SERVE_FRONTEND=true
 SERVE_STATIC=true
 FRONTEND_URL=http://localhost:8510
+API_PRIVATE_TOKEN=OUI2LzdfMUdbcy4cR01DXXQXKYaXxCf1
 
 # PostgreSQL environment variables
 POSTGRES_USER=usuario
