--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
     "prom-client": "^15.1.3",
-    "redis": "^5.10.0"
+    "redis": "^5.10.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
